# steeringresearch

./: .gitattributes  .gitignore  ARCHITECTURE.md  AUTORESEARCH_PROCESS.md  AWESOME_STEERING.md  CLAUDE.md  EXPERIMENT_LEDGER.md  FINDINGS.md  IDEA_TABLE.md  NEXT_STEPS.md  OVERNIGHT_PLAN.md  PREREGISTRATION.md  README.md  STATUS.md  conftest.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
audits/: CODE_QUALITY.md  ICML_REVIEW.md  ICML_SIGNOFF.md  ICML_SIGNOFF_v2.md  META_PROCESS_AUDIT.md  RUBRICS.md
audits/reviews/: CODE_REVIEW_pytorch.md  ICLR_review.md  ICML_review.md  IMPROVEMENTS_100.md  LabLeader_review.md  (+3 more)
auto-redteam/: ARCHITECTURE.md  README.md  pyproject.toml
auto-redteam/autoredteam/: __init__.py  attacker.py  banner.py  cli.py  config.py  conversation.py  defender.py  evaluator.py  interfaces.py  metrics.py  models.py  orchestrator.py  persistence.py  reporting.py  selection.py  swarm.py  taxonomy.py
auto-redteam/autoredteam/providers/: __init__.py  anthropic.py  base.py  gemini.py  local_gemma.py  mock.py  openai_compat.py
auto-redteam/autoredteam/strategies/: __init__.py  base.py  crescendo.py  mutation_loop.py  single_turn.py  tree_of_attacks.py
auto-redteam/config/: default.yaml  gemma_vs_gemini.yaml  goals_example.yaml
auto-redteam/config/taxonomies/: owasp_asi_2026.yaml
auto-redteam/prompts/: attacker_system.md  critic.md  generator.md  judge.md
auto-redteam/tests/: __init__.py  conftest.py  test_config.py  test_models.py  test_orchestrator_e2e.py  test_providers_mock.py  test_selection.py  test_strategies.py
autoresearch_results/: best_config.json  experiment_log.jsonl  reasoning_annotations.json
backlog/: README.md
corpus/: 50-steering-experiments-autoresearch.md  PSR-vs-non-PSR-steering.md  grok-gemmascope-conditional-steering-transcript.md  grok-steering-transcript.md  steering-benchmark-datasets-suite.md  steering-first-principles-and-rogue-scalpel-mitigation.md  steering-first-principles-v2-with-PSR-and-rogue-scalpel.md  steering-missed-dimensions-and-highdim-algebra.md  steering-stackable-vs-competing-analysis.md  steering-tiered-benchmark-ladder-4090.md
dashboard/: index.html
docs/: METHOD_LADDER.md  awesome-steering.html  index.html  mindmap.html
hypotheses/: GLOSSARY.md  METHODOLOGY.md  TRAINING-PROCESS.md
meta-skills/: README.md
paper/: PAPER.md
safety_probe/: README.md  __init__.py  app.py  config.py  data.py  infer.py  model_utils.py  train_probe.py
scripts/: build_provenance.py  campaign_sweep.py  confirm_e7.py  confirm_e7_boot.py  hf_fetch.py  method_exp_common.py  reproduce_headline.sh  run_axbench_conditional.py  run_axbench_e2.py  run_axbench_e3.py  run_axbench_e4.py  run_axbench_e7.py  run_axbench_ops.py  run_axbench_stack.py  run_e15.py  run_e20.py  run_e45.py  run_hillclimb.py  run_realign_abliterated.py  run_safety_eval.py  rung3_n17.py  validate_judge.py  verify_dashboard.py  verify_rubrics.py
steering_hello_world_tutorial/: README.md  __init__.py  app.py  audit_leakage.py  config.py  data.py  eval_ood.py  infer.py  train_probe.py
steering_tutorials/: DATA_SUFFICIENCY.md  README.md  __init__.py
tests/: test_adversarial.py  test_baselines.py  test_cast.py  test_controls.py  test_dashboard.py  test_eval.py  test_extract.py  test_gate.py  test_geometry.py  test_hooks.py  test_hypersteer.py  test_instruments.py  test_intent_gate.py  test_judge.py  test_multi_intent.py  test_real_metrics.py  test_real_model_smoke.py  test_run_safety_eval.py  test_runner.py  test_sae.py  test_safety_bench.py  test_safety_judge.py  test_safety_target.py  test_stats.py
(+884 files in other folders)
