[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "steering"
version = "0.1.0"
description = "Offline-first activation-steering autoresearch harness for small Gemma models"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.6",
    "numpy>=1.26",
    "scipy>=1.11",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
gemma = ["transformers>=4.55", "bitsandbytes>=0.43", "accelerate>=0.30"]
dev = ["pytest>=8.0", "pandas>=2.0", "matplotlib>=3.8", "datasets>=2.18"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
steering = ["data/*.json"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
