[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "steering"
version = "0.1.0"
description = "Offline-first activation-steering autoresearch harness for small Gemma models"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.6",
    "numpy>=1.26",
    "scipy>=1.11",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
gemma = ["transformers>=4.55", "bitsandbytes>=0.43", "accelerate>=0.30"]
dev = ["pytest>=8.0", "pandas>=2.0", "matplotlib>=3.8", "datasets>=2.18"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
steering = ["data/*.json"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "real_model: tests that require a locally-downloaded real model (skipped otherwise)",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# Ruff's default rule set (pyflakes F + a pragmatic subset of pycodestyle E)
# plus import-sorting (I). We deliberately do NOT enable E501 (line-length) or
# UP (pyupgrade) repo-wide: the 1795-line dashboard renderer is full of long
# HTML f-string literals and the codebase consistently uses typing.Optional —
# churning those is out of scope for this audit, which flagged only F/E-class
# defects (F401/F841/F541/E741).
select = ["E4", "E7", "E9", "F", "I"]

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
